# airbnb-clone

./: db.sqlite3  main.py  main2.py  pyproject.toml
Markdown/: 10-Rest_Framework.md  8-admin.md  9-View&URL.md  MD_6.APP.md  MD_7.ORM.md
bookings/: models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py  urls.py
direct_messages/: apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py
experiences/migrations/: 0001_initial.py  0002_initial.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/: models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py
wishlists/: models.py
wishlists/migrations/: 0001_initial.py  0002_alter_wishlist_experiences_alter_wishlist_rooms_and_more.py
