[tool.poetry]
name = "00-airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["ssu-uky <id_suhyun@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "00_airbnb_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
ipython = "^8.8.0"
beautifulsoup4 = "^4.11.1"
selenium = "^4.7.2"
black = "^22.12.0"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
